--- a/src/html/index.template.ejs
+++ b/src/html/index.template.ejs
@@ -6,111 +6,21 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <%= require('./partial/person.html').default %>
     <hello-world></hello-world>
 
-    <div class="uk-container">
-      <div class="uk-grid-medium" uk-grid>
-
-        <!-- Basic usage example for the Microsoft Fluent UI components. -->
-
-        <div class="uk-width-1-2" style="padding: 16px;">
-          <div class="box" style="height: 300px;">
-            <h2 class="box-header">Microsoft Fluent UI</h2>
-            <fluent-breadcrumb>
-              <fluent-breadcrumb-item>Home</fluent-breadcrumb-item>
-              <fluent-breadcrumb-item>Next Level Down</fluent-breadcrumb-item>
-              <fluent-breadcrumb-item>Current Location</fluent-breadcrumb-item>
-            </fluent-breadcrumb>
-            
-            <div style="margin: 16px 8px 16px 8px;">
-              <fluent-checkbox>Did you check this?</fluent-checkbox><br />
-              <fluent-checkbox checked disabled>Is this disabled?</fluent-checkbox><br />
-              <fluent-checkbox checked>Checked by default?</fluent-checkbox>
-            </div>            
-
-            <a target="_blank" href="https://web-components.fluentui.dev/?path=/docs/components-button-button--docs">
-              <fluent-button appearance="accent">Learn more</fluent-button>
-            </a>
+    <div class="uk-container uk-margin-top uk-margin-bottom">
+      <h1 style="text-align: center;">Check?</h1>
+      <div id="sha-upload" class="uk-placeholder uk-text-center">
+          <span uk-icon="icon: cloud-upload"></span>
+          <span class="uk-text-middle">Add file(s) by </span>
+          <div uk-form-custom>
+              <input id="sha-upload-input" type="file" multiple>
+              <span class="uk-link">selecting them</span>
           </div>
-        </div>
-
-        <!-- Basic usage example for the context state API. -->
-
-        <div class="uk-width-1-2" style="padding: 16px;">
-          <div class="box" style="height: 300px;">
-            <h2 class="box-header">Counter example</h2>
-            <counter-context>
-              <counter-display style="display: block; margin-bottom: 16px;"></counter-display>
-              <counter-up>Up</counter-up>
-              <counter-down>Down</counter-down>        
-            </counter-context>
-            <div style="height: 32px;"></div>
-            <counter-context>
-              <counter-display style="display: block; margin-bottom: 16px;"></counter-display>
-              <counter-up>Up</counter-up>
-              <counter-down>Down</counter-down>        
-            </counter-context>
-          </div>
-        </div>
-
-        <!-- Example of a "stateful" list that isn't using the context state pattern. -->
-
-        <div class="uk-width-1-2" style="padding: 16px;">
-          <div class="box">
-            <fluent-button appearance="accent" id="basic-add">Add</fluent-button>
-            <fluent-button appearance="accent" id="basic-remove" style="margin-bottom: 16px;">Remove</fluent-button>
-            <basic-checkbox-list items="5" id="basic-checkbox-list"></basic-checkbox-list>
-          </div>
-        </div>
-
-        <!-- Example of a "stateful" list that is using the context state pattern. -->
-
-        <div class="uk-width-1-2" style="padding: 16px;">
-          <div class="box">
-            <fluent-button appearance="accent" id="context-add">Add</fluent-button>
-            <fluent-button appearance="accent" id="context-remove" style="margin-bottom: 16px;">Remove</fluent-button>
-            <context-checkbox-list items="5" id="context-checkbox-list"></context-checkbox-list>
-          </div>
-        </div>
-
-        <!-- Some inspiration for displaying the elements of the person list. -->
-
-        <div class="uk-width-1-1" style="padding: 16px;">
-          <div class="box">
-            <fluent-card style="padding: 16px; margin-bottom: 16px;">
-              <span style="display: block; margin-bottom: 8px;">Loaded 48/128:</span>
-              <fluent-progress max="128" value="48"></fluent-progress>
-            </fluent-card>
-            <fluent-card style="padding: 16px; margin-bottom: 16px;">
-              <fluent-breadcrumb>
-                <fluent-breadcrumb-item>Continent</fluent-breadcrumb-item>
-                <fluent-breadcrumb-item>Country</fluent-breadcrumb-item>
-                <fluent-breadcrumb-item>City</fluent-breadcrumb-item>
-              </fluent-breadcrumb>
-              <h2 style="margin-top: 0px;">Person Name</h2>
-              <fluent-divider role="separator"></fluent-divider>
-              <p><p>This person was born in YEAR and is/was working as OCCUPATION in the INDUSTRY industry.</p></p>
-              <fluent-divider role="separator" style="margin-bottom: 16px;"></fluent-divider>
-              <a href="https://maps.google.com" target="_blank"><fluent-button appearance="accent">Show on map</fluent-button></a>
-              <fluent-button appearance="outline">Refresh</fluent-button>
-            </fluent-card>
-            <fluent-card style="padding: 16px; margin-bottom: 16px; height: 66px;">
-              <span style="display: inline-block; margin: 4px 16px 4px 16px;">Item failed to load.</span>
-              <fluent-button appearance="accent" style="float: left;">Refesh</fluent-button>
-            </fluent-card>
-            <fluent-skeleton style="height: 66px; padding: 16px; box-sizing: border-box;" shape="rect" shimmer="true">Loading...</fluent-skeleton>
-          </div>          
-        </div>
-
-        <div class="uk-width-1-1" style="padding: 16px;">
-          <div class="box">
-            <people-context>
-              <people-list></people-list>
-            </people-context>
-          </div>
-        </div>
       </div>
+
+      <h2 style="text-align: center;">Sum...</h2>
+      <div id="sha-digests"></div>
     </div>   
   </body>
 </html>
